updated the changelog

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,6 +1,12 @@
 Velo City
 ====================================================================================================
 
+v1.1.0
+----------------------------------------------------------------------------------------------------
+
+- [feature] Formated the results using tables.
+- [feature] Added a help command.
+
 v1.0.0
 ----------------------------------------------------------------------------------------------------
 - [feature] Implemented use cases:
