changed version to 1.2.0

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,9 +1,12 @@
 Velo City
 ====================================================================================================
 
+v1.2.0
+----------------------------------------------------------------------------------------------------
+- [feature] Added the "db" command that opens the dtabase file in a text editor.
+
 v1.1.0
 ----------------------------------------------------------------------------------------------------
-
 - [feature] Formated the results using tables.
 - [feature] Added a help command.
 
