--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -6,10 +6,11 @@ next
 - [feature] Added velocity chart on the sprints overview display.
 - [feature] Added commitment chart on the sprints overview display.
 - [feature] Added sprint size chart on the sprints overview display.
+- Removed the "velocity" command because the same chart is displayed by the "sprints" command.
 
 v1.2.0
 ----------------------------------------------------------------------------------------------------
-- [feature] Added the "db" command that opens the dtabase file in a text editor.
+- [feature] Added the "db" command that opens the database file in a text editor.
 
 v1.1.0
 ----------------------------------------------------------------------------------------------------
