--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -4,7 +4,7 @@ Velo City
 v1.4.0
 ----------------------------------------------------------------------------------------------------
 - [feature] Added sprint state property.
-- [feature] Display "Sprint Calendar" table when analysing a sprint.
+- [feature] Display "Sprint Calendar" table when analyzing a sprint.
 - [feature] Display more detailed notes after the sprint overview.
 - [feature] Added the "team" command that displays the list of team members.
 - [bugfix] Fixed app crush when user had no vacation in the database.
