update changelog file

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -3,6 +3,8 @@ Velo City
 
 v1.5.0
 ----------------------------------------------------------------------------------------------------
+- [feature] Added handling for recurrent vacations.
+
 
 v1.4.0
 ----------------------------------------------------------------------------------------------------
