update changelog file

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -5,6 +5,7 @@ v1.5.0
 ----------------------------------------------------------------------------------------------------
 - [feature] Added handling for recurrent vacations.
 - [feature] Added configurable data grid border style. It can be set from hthe config file.
+- [feature] Improved the "team" command.
 
 
 v1.4.0
