--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -4,8 +4,10 @@ Velo City
 v1.5.0
 ----------------------------------------------------------------------------------------------------
 - [feature] Added handling for recurrent vacations.
-- [feature] Added configurable data grid border style. It can be set from hthe config file.
+- [feature] Added configurable data grid border style. It can be set from the config file.
 - [feature] Improved the "team" command.
+- [feature] Defined the default sprint for the "sprint" command as being the last "in-progress" sprint.
+- [feature] Added the "config" command that displays the values from the config file.
 
 
 v1.4.0
