updated the changelog file.

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -8,6 +8,7 @@ v1.5.0
 - [feature] Improved the "team" command.
 - [feature] Defined the default sprint for the "sprint" command as being the last "in-progress" sprint.
 - [feature] Added the "config" command that displays the values from the config file.
+- [feature] Display in the Sprint's Clendar the team members that have vacation.
 
 
 v1.4.0
