--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -3,7 +3,8 @@ Velo City
 
 v1.6.0
 ----------------------------------------------------------------------------------------------------
-
+- [feature] Included a velocity penalty for each team member used in the estimation calculation
+            algorithm.
 
 v1.5.0
 ----------------------------------------------------------------------------------------------------
