refactored the notes control

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -3,7 +3,7 @@ Velo City
 
 v1.7.0
 ----------------------------------------------------------------------------------------------------
-
+- [feature] Added AnalysisLookBack value in the config file.
 
 v1.6.0
 ----------------------------------------------------------------------------------------------------
