incremented version to 1.9.0

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,12 +1,16 @@
 Velo City
 ====================================================================================================
 
+v1.9.0
+----------------------------------------------------------------------------------------------------
+
+
 v1.8.0
 ----------------------------------------------------------------------------------------------------
 - [feature] Added the "calendar" command to display the calendar for a specific sprint.
 - [feature] Added the "forecast" command to display a forecast for the specified interval of time.
 - [feature] Moved the notes inside the footer of the tables.
-- [feature] Generate usage informations for the help command.
+- [feature] Generate usage information for the help command.
 - [feature] Vacation command displays the vacations for the currently active team members by default.
 - [feature] Added the velocity command that displays a chart with the velocities calculated for the
             last n sprints.
