--- a/sources/VeloCity.Domain/Resources.resx
+++ b/sources/VeloCity.Domain/Resources.resx
@@ -117,7 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="DataAccess_DefaultError" xml:space="preserve">
+  <data name="DataAccess_DefaultErrorMessage" xml:space="preserve">
     <value>Error reading the database.</value>
+  </data>
+  <data name="DatabaseFileNotFound_DefaultErrorMessage" xml:space="preserve">
+    <value>Database file does not exist: '{0}'</value>
+  </data>
+  <data name="DatabaseNotFound_DefaultErrorMessage" xml:space="preserve">
+    <value>Database was not found. Connection string: {0}</value>
+  </data>
+  <data name="DatabaseOpen_DefaultErrorMessage" xml:space="preserve">
+    <value>Failed to open the database file.</value>
+  </data>
+  <data name="SprintDoesNotExist_DefaultErrorMessage" xml:space="preserve">
+    <value>The sprint with number {0} does not exist in the database.</value>
   </data>
 </root>
