--- a/sources/VeloCity.Domain/Resources.resx
+++ b/sources/VeloCity.Domain/Resources.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ConfigurationElement_DefaultErrorMessage" xml:space="preserve">
+    <value>Error reading the {0} value from the configuration file.</value>
+  </data>
+  <data name="ConfigurationOpen_DefaultErrorMessage" xml:space="preserve">
+    <value>Could not open the configuration file.</value>
+  </data>
   <data name="DataAccess_DefaultErrorMessage" xml:space="preserve">
     <value>Error reading the database.</value>
   </data>
@@ -128,6 +134,9 @@
   </data>
   <data name="DatabaseOpen_DefaultErrorMessage" xml:space="preserve">
     <value>Failed to open the database file.</value>
+  </data>
+  <data name="NoSprint_DefaultErrorMessage" xml:space="preserve">
+    <value>There is no sprint in the database.</value>
   </data>
   <data name="SprintDoesNotExist_DefaultErrorMessage" xml:space="preserve">
     <value>The sprint with number {0} does not exist in the database.</value>
