--- a/sources/VeloCity.Domain/Resources.resx
+++ b/sources/VeloCity.Domain/Resources.resx
@@ -135,6 +135,9 @@
   <data name="DatabaseOpen_DefaultErrorMessage" xml:space="preserve">
     <value>Failed to open the database file.</value>
   </data>
+  <data name="NoSprintInProgress_DefaultErrorMessage" xml:space="preserve">
+    <value>There is no sprint in progress. Please provide a specific sprint number.</value>
+  </data>
   <data name="NoSprint_DefaultErrorMessage" xml:space="preserve">
     <value>There is no sprint in the database.</value>
   </data>
