--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -6,6 +6,7 @@ v1.9.0
 - [feature] Added "date" parameter to the "vacation" command.
 - [feature] Added "analysis-look-back" parameter to the "sprint" command.
 - [feature] Repeate the recurrent vacations in each month ("vacations" command).
+- [feature] Write errors into the log file.
 
 
 v1.8.0
