--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -7,6 +7,8 @@ v1.9.0
 - [feature] Added "analysis-look-back" parameter to the "sprint" command.
 - [feature] Repeate the recurrent vacations in each month ("vacations" command).
 - [feature] Write errors into the log file.
+- [feature] Added a note in the forecast screen with the closed sprints used for vaelocity
+            calculation.
 
 
 v1.8.0
