--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -12,7 +12,7 @@ v1.9.0
             calculation.
 - [feature] Added team member information in the month calendar.
 - [feature] [GUI] Created a minimal GUI with list of Sprints and two details pages for each sprint:
-            Overview and Calendar.
+            Overview and Calendar. (not released yet, but can be found on github)
 
 v1.8.0
 ----------------------------------------------------------------------------------------------------
