--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -3,7 +3,7 @@ Velo City
 
 v1.10.0
 ----------------------------------------------------------------------------------------------------
-
+- [feature] [wpf] Displayed detailed calendar for each sprint member.
 
 v1.9.0
 ----------------------------------------------------------------------------------------------------
