--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -4,6 +4,7 @@ Velo City
 v1.10.0
 ----------------------------------------------------------------------------------------------------
 - [feature] [wpf] Displayed detailed calendar for each sprint member.
+- [feature] [wpf] Displayed the database json file path into the status bar.
 
 v1.9.0
 ----------------------------------------------------------------------------------------------------
