--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -3,7 +3,8 @@ Velo City
 
 v1.11.0
 ----------------------------------------------------------------------------------------------------
-
+- [feature] [wpf] Added sprint start and close buttons.
+- [design]  [wpf] Updated all icons to be vectorial graphics.
 
 v1.10.0
 ----------------------------------------------------------------------------------------------------
