changed the icon

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -3,7 +3,7 @@ Velo City
 
 v1.12.0
 ----------------------------------------------------------------------------------------------------
-
+- [feature] [wpf] Display a velocity chart.
 
 v1.11.0
 ----------------------------------------------------------------------------------------------------
