added the culture property in settings file

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -4,6 +4,10 @@ Velo City
 v1.12.0
 ----------------------------------------------------------------------------------------------------
 - [feature] [wpf] Display a velocity chart.
+- [feature] [wpf] Display a commitment chart.
+- [feature] [wpf] Create the team members page with vacations aned employments.
+- [feature] [wpf] Added info bubbles for the items in sprint overview and sprint calendar pages.
+- [feature] [wpf] Added the "Culture" property in settings file.
 
 v1.11.0
 ----------------------------------------------------------------------------------------------------
