displayed the story points with bigger font size on the sprint overview page.

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -3,7 +3,7 @@ Velo City
 
 v1.16.0
 ----------------------------------------------------------------------------------------------------
-
+- [feature] [wpf] Displayed the story points with bigger font size on the sprint overview page.
 
 v1.15.0
 ----------------------------------------------------------------------------------------------------
