#178 - displayed the sprint members as icons

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,6 +1,11 @@
 Velo City
 ====================================================================================================
 
+v1.18.0
+----------------------------------------------------------------------------------------------------
+- [feature] Display sprint memers as icons in the "Sprint Members" tab.
+
+
 v1.17.0
 ----------------------------------------------------------------------------------------------------
 - [feature] [wpf] Reduces the size of the navigator buttons and some spaces.
